--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Mobile Phone</li>
+		<li data-ns-test="shoppingList">Shoes</li>
+		<li data-ns-test="shoppingList">Clothes</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Jaipur</li>
+		<li data-ns-test="holidayList">Shimla</li>
+		<li data-ns-test="holidayList">Rishikesh</li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
